log
Thu May 12 00:23:39 UTC 2022: 
 tests:  0|5
total_score: 0/70
bbaa8ee
Thu May 12 02:53:52 UTC 2022: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:13: error: implicit declaration of function ‘push_back’; did you mean ‘pushBack’? [-Werror=implicit-function-declaration]
             push_back(list, adj_n);
             ^~~~~~~~~
             pushBack
cc1: all warnings being treated as errors
Compilation failed
65969d3
Thu May 12 02:54:40 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
2a3d291
Thu May 12 02:59:36 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
00c469d
Thu May 12 03:00:00 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:64:12: error: ‘new_move’ undeclared (first use in this function); did you mean ‘memmove’?
            new_move += 1;
            ^~~~~~~~
            memmove
sudoku.c:64:12: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4933c0b
Thu May 12 03:00:09 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1f51d23
Thu May 12 03:00:26 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bbde90e
Thu May 12 03:11:40 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
aabe64f
Thu May 12 03:11:59 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
9df9c4b
Thu May 12 03:12:10 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1c53d50
Thu May 12 03:12:31 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
7749d55
Thu May 12 03:13:07 UTC 2022: 
 sudoku.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
c132d73
Thu May 12 03:14:27 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
67b4478
Thu May 12 03:14:34 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3ae98d7
Thu May 12 03:14:48 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
684ff07
Thu May 12 03:15:01 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
0daf72a
Thu May 12 03:16:35 UTC 2022: 
 sudoku.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
da89368
Thu May 12 03:17:25 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4d515ab
Thu May 12 03:20:16 UTC 2022: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e30621d
Thu May 12 03:20:38 UTC 2022: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|4
total_score: 15/70
b62b635
Thu May 12 03:20:49 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|4
total_score: 15/70
8ed7b39
Thu May 12 03:21:19 UTC 2022: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ed92dd9
Thu May 12 03:24:14 UTC 2022: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:53:18: error: ‘nodo’ undeclared (first use in this function); did you mean ‘Node’?
     printf("%d ",nodo->sudo[i][j]);
                  ^~~~
                  Node
sudoku.c:53:18: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:52:9: error: variable ‘j’ set but not used [-Werror=unused-but-set-variable]
     int j=3*(k%3) + (p%3) ;
         ^
sudoku.c:51:9: error: variable ‘i’ set but not used [-Werror=unused-but-set-variable]
     int i=3*(k/3) + (p/3) ;
         ^
cc1: all warnings being treated as errors
Compilation failed
81a4592
